<resources>
    <string name="app_name">Health Calc</string>

    <string name="app_title">Health\nCalc</string>
    <string name="login_activity_login">Login</string>
    <string name="login_activity_subtitle">Faça Login para continuar</string>
    <string name="login_activity_email">E-mail</string>
    <string name="login_activity_password">Senha</string>
    <string name="login_activity_enter">Entrar</string>
    <string name="login_activity_lembrar_me">Lembrar-me</string>
    <string name="login_activity_esqueci_a_senha">Esqueci a senha</string>
    <string name="login_activity_nao_tem_um_conta">Não tem um conta?</string>
    <string name="login_activity_criar_uma_conta_agora">Criar uma conta agora</string>
    <string name="trocar_foto">Trocar foto</string>
    <string name="dados_para_autenticao">Dados para autenticação</string>
    <string name="senha">senha</string>
    <string name="dados_pessoais">dados pessoais</string>
    <string name="nome">nome</string>
    <string name="profissao">profissao</string>
    <string name="altura">altura</string>
    <string name="data_de_nascimento">data de nascimento</string>
    <string name="sexo">sexo</string>

    <string-array name="niveis">
        <item>Atividade Leve</item>
        <item>Atividade Moderada</item>
        <item>Atividade Intensa</item>
    </string-array>

</resources>