<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <RelativeLayout
       android:id="@+id/rl_header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="16dp"
       android:paddingStart="32dp"
       android:paddingEnd="32dp"
       android:background="#8b0000"
       android:layout_alignParentTop="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentEnd="true">

       <TextView
           android:id="@+id/tv_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:fontFamily="@font/days_one"
           android:text="@string/app_title"
           android:textAppearance="@style/title"/>


       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/bmi"
           android:layout_alignParentEnd="true"
           android:layout_alignTop="@+id/tv_title"
           android:layout_alignBottom="@+id/tv_title"/>

   </RelativeLayout>

    <ImageView
        android:id="@+id/wave_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/rl_header"
        android:src="@drawable/ic_wave_down"
        android:scaleType="fitXY"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:id="@+id/wave_bottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_wave_up"
        android:scaleType="fitXY" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/wave_top"
        android:layout_above="@+id/wave_bottom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_subtitle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email_24"
                android:drawablePadding="8dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_password"
                android:inputType="numberPassword"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="5dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_enter"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>