<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:orientation="vertical"
    android:background="#0D070707">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/white"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/paul_walker"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:fontFamily="@font/montserrat"
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trocar_foto"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primary"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>

</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados_para_autenticao"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="@string/login_activity_email">

                <EditText
                    android:id="@+id/edit_novo_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="Senha">

                <EditText
                    android:id="@+id/edit_novo_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dados pessoais"
                android:drawableStart="@drawable/person_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat"
                android:layout_marginTop="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="Nome">

            <EditText
                android:id="@+id/edit_novo_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="Profissão">

                <EditText
                    android:id="@+id/edit_novo_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:ignore="DuplicateIds" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="Altura">

                <EditText
                    android:id="@+id/edit_novo_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:ignore="DuplicateIds" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#0D070707"
                android:layout_marginTop="16dp"
                android:hint="Data de Nascimento">

                <EditText
                    android:id="@+id/edit_novo_data_de_nascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    tools:ignore="DuplicateIds" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:drawablePadding="8dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:id="@+id/radio_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feminino"/>


                <RadioButton
                    android:id="@+id/radio_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculino"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f666"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>